# Algo-1

LABOS_ENTREGABLE/: bpp  bpp.cpp  bug_mcd.cpp  estaOrdenado.cpp  menorMasGrande.cpp  puntoFijo.cpp  rotar.cpp  solution.cpp  solution2.cpp  swap.cpp
LABOS_ENTREGABLE/LABO04/: CMakeLists.txt  bug_mcd.cpp
LABOS_ENTREGABLE/LABO05/: Existe_pico.cpp
LABOS_ENTREGABLE/LABO05_3/: CMakeLists.txt  ordenar.cpp
LABOS_ENTREGABLE/existe_pico/: CMakeLists.txt
LABOS_ENTREGABLE/min_subsecuencia/: CMakeLists.txt  min_subsecuencia.cpp
Labo05/: ejercicios.cpp  main
Labo06/: CMakeLists.txt
Labo06/ej1/Test/: puntajeTEST.cpp
Labo06/ej2/Test/: llenarTaxisTEST.cpp
Labo07/: CMakeLists.txt  ejercicios.cpp
Labo08/: CMakeLists.txt
Labo08/src/: ejercicios.cpp
Labo09/: main.cpp
Labo10/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Labo11/template-alumnos/anagramas/src/: main.cpp
Labo11/template-alumnos/bin-package/src/: main.cpp
Labo12/: abs.dfy  add.dfy  anular.dfy  binaria.dfy  double-exp.dfy  lineal.dfy
Practica8/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Teorica14/: exploit-toctou.sh
